k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  namespace: devops-demo
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000

## Flow #1 (Static content)

# Browser asks for /.
# Ingress → frontend Service → frontend Pod (NGINX).
# NGINX serves the React app.

## Flow #2 (API calls) (the ingress controller picks up the traffic/request and forwards it to the backend service)

# React app runs in browser.
# Makes request to /api/....
# Ingress → backend Service → backend Pod (Express).
# Express responds with JSON, which browser uses to update UI.
